--- a/Views/Shared/_Sidebar.cshtml
+++ b/Views/Shared/_Sidebar.cshtml
@@ -3,9 +3,12 @@
 @using Microsoft.AspNetCore.Http
 @using System.Security.Claims
 
+
+
 @{
     var isAdmin = User.Claims.Any(c => c.Type == "Admin" && c.Value == "True");
 }
+
 
 
     <aside id="sidebar" class="sidebar">
@@ -19,60 +22,60 @@
                 </a>
             </li><!-- End Dashboard Nav -->
            
-        @if (isAdmin)
-        {
-            <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-layout-text-window-reverse"></i><span>Ortak Veriler</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a href="/PersonelBirim/Index">
-                            <i class="bi bi-bullseye"></i><span>Birim Ekle</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/BedenNumara/Index">
-                            <i class="bi bi-bullseye"></i><span>Beden/Numara Ekle</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/Unvan/Index">
-                            <i class="bi bi-bullseye"></i><span>Unvan Ekle</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/Birim/Index">
-                            <i class="bi bi-bullseye"></i><span>Envanter Birimi</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/KkdNiteligi/Index">
-                            <i class="bi bi-bullseye"></i><span>Envanter Ekle</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/KkdGrubu/Index">
-                            <i class="bi bi-bullseye"></i><span>Grup Ekle</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/Personel/Index">
-                            <i class="bi bi-person-raised-hand"></i><span>Personel Giriş</span>
-                        </a>
-                    </li>
+            @if (isAdmin)
+            {
+                <li class="nav-item">
+                    <a class="nav-link collapsed" data-bs-toggle="collapse" href="#common-data-nav" role="button" aria-expanded="false" aria-controls="common-data-nav">
+                        <i class="bi bi-layout-text-window-reverse"></i><span>Ortak Veriler</span><i class="bi bi-chevron-down ms-auto"></i>
+                    </a>
+                    <ul id="common-data-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+                        <li>
+                            <a href="/PersonelBirim/Index">
+                            <i class="bi bi-clipboard-data"></i><span>Birim Ekle</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/BedenNumara/Index">
+                            <i class="bi bi-clipboard-data"></i><span>Beden/Numara Ekle</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/Unvan/Index">
+                            <i class="bi bi-clipboard-data"></i><span>Unvan Ekle</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/Birim/Index">
+                            <i class="bi bi-clipboard-data"></i><span>Envanter Birimi</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/KkdNiteligi/Index">
+                            <i class="bi bi-clipboard-data"></i><span>Envanter Ekle</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/KkdGrubu/Index">
+                            <i class="bi bi-clipboard-data"></i><span>Grup Ekle</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="/Personel/Index">
+                                <i class="bi bi-person-raised-hand"></i><span>Personel Giriş</span>
+                            </a>
+                        </li>
 
-                </ul>
-            </li><!-- End Forms Nav -->
+                    </ul>
+                </li><!-- End Forms Nav -->
 
             }
 
 
             <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
+            <a class="nav-link collapsed" data-bs-toggle="collapse" href="#inventory-nav" role="button" aria-expanded="false" aria-controls="inventory-nav">
                     <i class="bi bi-bar-chart"></i><span>KKD Envanter Takip</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
-                <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <ul id="inventory-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                     <li>
                         <a href="/KkdEnvanterTakip/Index">
                             <i class="bi bi-card-list"></i><span>Envanter Takip</span>
@@ -91,10 +94,7 @@
                 </ul>
             </li><!-- End Charts Nav -->
 
-            @* 
-            <li class="nav-heading">Pages</li> *@
-
-
+          
 
             <li class="nav-item">
                 <a class="nav-link collapsed" href="/User/Cikis">
@@ -104,6 +104,11 @@
             </li><!-- End Login Page Nav -->
 
 
+           @*  <li class="nav-heading">Pages</li>  *@
+
         </ul>
 
     </aside>
+
+
+
